# blitz3d_msvc2017

./: .gitignore  CMakeLists.txt  README.TXT  README.md  blitz3d.sln  setup.iss
_release/: versions.txt
asm_makeinsts/: asm_makeinsts.vcxproj
bblaunch/: CMakeLists.txt  bblaunch.vcxproj
bbruntime/: CMakeLists.txt  bbblitz3d.cpp  bbruntime.cpp  bbruntime.vcxproj  bbsgd.cpp  bbsgd.h
bbruntime_dll/: CMakeLists.txt  bbruntime_dll.vcxproj
blitz/: CMakeLists.txt  blitz.vcxproj  main.cpp
blitz3d/: CMakeLists.txt  blitz3d.vcxproj
blitzide/: CMakeLists.txt  about.cpp  blitzide.vcxproj  editor.cpp  mainframe.cpp  prefs.cpp  prefs.h
compiler/: CMakeLists.txt  compiler.vcxproj
config/: CMakeLists.txt  config.h  config.vcxproj
debugger/: CMakeLists.txt  debugger.vcxproj  mainframe.cpp  prefs.cpp  sourcefile.cpp
fmod375/: CMakeLists.txt
freeimage/: CMakeLists.txt
freeimage/FreeImageLib/: FreeImageLib.vcxproj
freeimage/LibJPEG/: LibJPEG.vcxproj
freeimage/LibPNG/: LibPNG.vcxproj
freeimage/ZLib/: ZLib.vcxproj
gxruntime/: CMakeLists.txt  ddutil.cpp  gxgraphics.cpp  gxinput.cpp  gxruntime.cpp  gxruntime.h  gxruntime.vcxproj  gxruntime_b3d.cpp  gxruntime_b3d.h  gxruntime_sgd.cpp  gxscene.cpp
libsgd/: CMakeLists.txt
linker/: CMakeLists.txt  linker.vcxproj
linker_dll/: CMakeLists.txt  linker_dll.vcxproj
stdutil/: CMakeLists.txt  stdutil.vcxproj
